--- a/src/asserts/css/navbar.scss
+++ b/src/asserts/css/navbar.scss
@@ -5,7 +5,7 @@
 		padding: 7px 26px !important;
 		font-size: 14px;
 		font-weight: 700;
-		color: white !important;
+		color: white;
 		border-radius: 40px;
 		border: none;
 		box-shadow: 0 4px 10px 8px rgba(0, 0, 0, 0.05), 0 6px 20px 2px rgba(0, 0, 0, 0.04);
