--- a/src/asserts/css/Appheader.scss
+++ b/src/asserts/css/Appheader.scss
@@ -1,8 +1,9 @@
 .home-main-header .row .home-img-session {
     height : 100%;
+    width : 100%;
 
     .home-ad-event-pic img , .home-ad-left-right-arrow img , .home-ad-ves_logo img{
-        width : 150px;
+        width : 140px;
     }
 
     .home-ad-left-right-arrow img{
@@ -11,9 +12,41 @@
 
 }
 
+
 .home-main-header .row .home-content .home-main-title{
     font-weight: 600;
-    font-size: 42px;
+    font-size: 2.7em;
 } 
 
- 
+.home-main-header .row .home-content .home-description{
+    font-size : 0.98em;
+}
+
+
+@media (max-width: 992px){
+    .home-main-header .row .home-content {
+        padding : 20px 10px;
+    }
+
+    .home-main-header .row .home-img-session{
+        padding : 0px 10px;
+
+        .home-ad-event-pic , .home-ad-left-right-arrow , .home-ad-ves_logo{
+            width : 33%;
+        }
+    
+        .home-ad-event-pic img , .home-ad-left-right-arrow img , .home-ad-ves_logo img{
+            width : 100%;
+        }
+
+        .home-ad-left-right-arrow img{
+            position : relative;
+            left :  4%;
+            margin : 0;
+        }
+    }
+
+    .home-main-header .row .home-content .home-main-title{
+        font-size: 2.3em;
+    } 
+}
