Codebase is cleaned.

--- a/src/asserts/css/EventCards.scss
+++ b/src/asserts/css/EventCards.scss
@@ -17,12 +17,12 @@
 
 .MY-on-going-evenets-session .society-page-events-each-container{
    min-width : 200px !important;
-   max-width: 313px !important; 
+   max-width: 320px !important; 
    
 }
 
 .MY-on-going-evenets-session .each-event-container{
-	border : 1px solid black;
+	border: 1px solid #bdbdbd;
 	border-radius : 15px;
 	padding : 0px;
 
