event page is added

--- a/src/asserts/css/SearchModal.scss
+++ b/src/asserts/css/SearchModal.scss
@@ -133,6 +133,7 @@
             padding : 5px 0px;
             background: #dadada57;
             border-radius: 2px;
+            margin-bottom : 1px;
             
             .searched-content-img-session{
                 margin-right : 10px;
@@ -173,7 +174,7 @@
 
         .searched-content .each-search-content:hover{
             padding: 5px 0px;
-            background: #dadada57;
+            background: #eaeaea;
             border-radius: 2px;     
         }
         
