--- a/src/asserts/css/EventCards.scss
+++ b/src/asserts/css/EventCards.scss
@@ -121,6 +121,17 @@
 				border: none;
 				box-shadow: 0 4px 10px 8px rgba(0, 0, 0, 0.05), 0 6px 20px 2px rgba(0, 0, 0, 0.04);
 			}
+
+			#each-event-unregister-button{ 
+				font-size: 13px;
+				width : 114px;
+				height : 34px;
+				font-weight: 600;
+				color: white !important;
+				border-radius: 33px;
+				border: none;
+				box-shadow: 0 4px 10px 8px rgba(0, 0, 0, 0.05), 0 6px 20px 2px rgba(0, 0, 0, 0.04);
+			}
 		}
     }
 }
