--- a/src/asserts/css/Society.scss
+++ b/src/asserts/css/Society.scss
@@ -145,6 +145,7 @@
 
 .about-society-session{
     margin-top : 50px; 
+    margin-bottom : 30px;
 
     .society-iamges-and-description{
         text-align : center;
@@ -215,50 +216,49 @@
         pointer-events: none;
         content: "";
     }
-
-
-    .all-membes-cards{
-        
-
-        .each-member-card{
-
-            .card{
-                margin-bottom : 15px;
-            }
-
-            img{
-                width : 100%;
-                height : 180px;
-                object-fit: cover;
-                object-position: center;
-            }
-
-            .card-body{
-                padding : 14px 18px;
-            }
-
-            .card-title {
-                font-weight : 500;
-                font-size : 19px;
-            }
-
-            .card-text{
-                margin : 0px;
-                font-size : 14px;
-            }
-
-            button{
-                margin-top : 10px;
-                font-weight: 500;
-                border : none;
-                outline : none;
-                padding : 4px 15px;
-                background : #1E6AD9;
-            }
-        }
-         
-    }
 } 
+
+
+.card{
+    margin-bottom : 15px;
+    
+    img{
+        width : 100%;
+        height : 180px;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    #card-profile-image{
+        height : 224px;
+    }
+    
+    .card-body{
+        padding : 14px 18px;
+    }
+    
+    .card-title {
+        font-weight : 500;
+        font-size : 19px;
+    }
+    
+    .card-text{
+        margin : 0px;
+        font-size : 14px;
+    }
+    
+    button{
+        margin-top : 10px;
+        font-weight: 500;
+        border : none;
+        outline : none;
+        padding : 4px 15px;
+        background : #1E6AD9;
+    }
+}
+
+
+
 
 // Event-statistics session
 
