--- a/src/asserts/css/UserProfile.scss
+++ b/src/asserts/css/UserProfile.scss
@@ -17,3 +17,11 @@
 .profile-page-session-content-div .row .col-12{
     padding : 15px !important;
 }
+
+.event-and-members-images{
+    width : 40px;
+    height : 40px;
+    border-radius : 8px;
+    object-fit: cover;
+    object-position: start;
+}
