Manage members section is added

--- a/src/asserts/css/Society.scss
+++ b/src/asserts/css/Society.scss
@@ -160,7 +160,7 @@
 
 // About Society _page
 .society-page-navigation-session{
-    margin : 0px 6.5%;
+    margin : 0px 6.5% 50px;
 
     #pills-tab{
         border-bottom: 1px solid #d1d1d1ba;
@@ -406,5 +406,7 @@
             background : #e0e0e0;
         }
     }
-
 }
+
+
+
