--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,58 @@ body{
 	font-family: 'Montserrat', sans-serif;
 }
 
+
+
+
+.spinner-div{
+  margin : 50px auto;   
+}
+
+
+.custom-spinner{
+  color : #007bff;
+  width: 50px;
+  height: 50px;
+}
+
+.full-page-spinner{
+    position: fixed;
+    margin : 0px;
+    width: 100%;
+    z-index: 2;
+    height: 100%;
+    background: #ffffff82;
+}
+
+.screen-cover-spinner-div{
+    background: #ffffff82;
+}
+
+.white-spinner-div{
+  display: inline-block;
+}
+
+.white-small-button-spinner{
+  color :  white;
+  width: 17px;
+  height: 17px;
+  margin : 0px;
+}
+
+
+.spinner-text{
+  color: white;
+  font-weight: 600;
+  margin-left: 8px;
+}
+
+
+.disable-button{
+  cursor : not-allowed;
+}
+
+.custom-modal-spinner{
+    color : #007bff;
+    width: 38px;
+    height: 38px;
+}
