manage members page ui bugs are removed. loader on that page is added.

--- a/src/asserts/css/SocietyMembers.scss
+++ b/src/asserts/css/SocietyMembers.scss
@@ -95,11 +95,10 @@
 
             .new-member-add-div {
                 margin-top : 20px;
-                    
+
                 .insert-member-input-feild{
-                    border : none;
-                    border-radius : 0;
-                    border-bottom: 1px solid black;
+                    border: 1px solid #b9b9b9;
+                    border-radius: 4px;
                 }
             }
             
