event registration visualization is done.

--- a/src/asserts/css/Society.scss
+++ b/src/asserts/css/Society.scss
@@ -338,6 +338,10 @@
         font-size : 15px;
     }
 
+    .short-desc {
+        font-size : 14px;
+    }
+
     .date-and-time-session{
         margin-bottom : 8px;
 
