All visualization models are updated and components are divided into smaller components

--- a/src/asserts/css/EventPage.scss
+++ b/src/asserts/css/EventPage.scss
@@ -83,7 +83,7 @@
 
                 span{
                     padding: 7px 9px;
-                    width: 72px;
+                    width: fit-content;
                     display: inline-block;
                     border-radius: 3px;
                     min-height: 20px;
